# iMISMoodleBridge

./: .gitignore  README.md  order_confirmation.html  passenger_wsgi.py  pyproject.toml  sampleconfig.json
imismoodlebridge/: __init__.py  imisUtil.py  routes.py  synccache.py  synctask.py
moodle helpers/: maximizeSCORMview.html
